--- a/07. Matrices II.ipynb
+++ b/07. Matrices II.ipynb
@@ -1108,6 +1108,465 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popfirst!(a) # eliminates first element of a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: c not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: c not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[56]:1"
+     ]
+    }
+   ],
+   "source": [
+    "pushfirst!(a,c) # adds c as an additional element of a at its start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop!(a) # eliminates last element of a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: c not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: c not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[58]:1"
+     ]
+    }
+   ],
+   "source": [
+    "push!(a,c) # adds c as an additional element of a at its end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 2\n",
+       " 4\n",
+       " 5"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [2,1,3]\n",
+    "b = [2,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Array{Int64,1}:\n",
+       " 2\n",
+       " 1\n",
+       " 3\n",
+       " 4\n",
+       " 5"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "union(a,b) # returns 2,1,3,4,5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Array{Int64,1}:\n",
+       " 2"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intersect(a,b) # returns 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 3"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setdiff(a,b) # returns 1,3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 4\n",
+       " 5"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setdiff(b,a) # returns 4,5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Int64,2}:\n",
+       " 1  2\n",
+       " 3  4"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1 2; 3 4] # create a 2x2 matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[2, 2] # access element 2,2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 2"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1, :] # access first row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "BoundsError",
+     "evalue": "BoundsError: attempt to access 2×2 Array{Int64,2} at index [2, 5]",
+     "output_type": "error",
+     "traceback": [
+      "BoundsError: attempt to access 2×2 Array{Int64,2} at index [2, 5]",
+      "",
+      "Stacktrace:",
+      " [1] getindex(::Array{Int64,2}, ::Int64, ::Int64) at ./array.jl:732",
+      " [2] top-level scope at In[67]:1"
+     ]
+    }
+   ],
+   "source": [
+    "a[2, 5] # access element 2,2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 3"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:, 1] # access first column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       " 0.0  0.0\n",
+       " 0.0  0.0"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = zeros(2,2) # zero matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ones(2,2) # unitary matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×4 Array{Int64,2}:\n",
+       " 2  2  2  2\n",
+       " 2  2  2  2\n",
+       " 2  2  2  2"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = fill(2,3,4) # fill a 3x4 matrix with 2's"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 BitArray{2}:\n",
+       " true  true\n",
+       " true  true"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = trues(2,2) # 2x2 matrix of trues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 BitArray{2}:\n",
+       " false  false\n",
+       " false  false"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = falses(2,2) # 2x2 matrix of falses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       " 0.0129514  0.270385\n",
+       " 0.265078   0.88472 "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = rand(2,2) # random matrix (uniform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×2 Array{Float64,2}:\n",
+       "  0.0204689  -2.02295\n",
+       " -0.0329929   1.02578"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = randn(2,2) # random matrix (gaussian)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
