--- a/07. Matrices II.ipynb
+++ b/07. Matrices II.ipynb
@@ -1811,6 +1811,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching sort(::Array{Int64,2}, ::Int64)\nClosest candidates are:\n  sort(::AbstractArray; dims, alg, lt, by, rev, order) at sort.jl:966",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching sort(::Array{Int64,2}, ::Int64)\nClosest candidates are:\n  sort(::AbstractArray; dims, alg, lt, by, rev, order) at sort.jl:966",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[85]:1"
+     ]
+    }
+   ],
+   "source": [
+    "sort(a,2)\n",
+    " # sorts columns lexicographically\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
